fix(agent-insights): address PR review comments
- Reject null issue elements at the API boundary (List<@NotNull @Valid ReportedIssue>)
- Use READ_ONLY transactions for findIssues/getIssue reads
- Move issue id/metadata serialization out of the write transaction
- Extract resolveWindow helper to share window defaults and validation

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>